# BenchTest

./: .gitignore  Makefile  README.md  bencmark.ipynb  docker-compose.yml
docker/: actix.Dockerfile  axum.Dockerfile
measures/degradation/: actix_deep.csv  actix_flat.csv  actix_mixed.csv  axum_deep.csv  axum_flat.csv  axum_mixed.csv
measures/max_load/: actix_deep.csv  actix_flat.csv  actix_mixed.csv  axum_deep.csv  axum_flat.csv  axum_mixed.csv
scripts/: container_manager.py  dirs.py  loader.py  main.py  measure.py  mes_main.py  objs.py  plot.py  requirements.txt
servers/: Cargo.toml
servers/actixw-server/: Cargo.toml
servers/actixw-server/src/: main.rs
servers/axum-server/: Cargo.toml
servers/axum-server/src/: main.rs
servers/metrics/: Cargo.toml
servers/metrics/src/: lib.rs
servers/objs/: Cargo.toml
servers/objs/src/: deep.rs  flat.rs  lib.rs  mixed.rs
